--- a/index.html
+++ b/index.html
@@ -7,17 +7,31 @@
     <meta name="Keywords" description="Google Searchbar template">
     <link rel="stylesheet" href="style.css">
     <title>Google Search Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <nav>
         <ul class="nav-links">
-            <li>Gmail</li>
-            <li>Images</li>
+            <li>
+                <a href="http://www.gmail.com" target="_blank">
+                    Gmail
+                </a>
+            </li>
+            <li>
+                <a href="https://www.google.com/photos/" target="_blank">
+                    Images
+                </a>
+            </li>
+
             <li><i class="fa-solid fa-store"></i></li>
 
             <div class="logo">
-                <img src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png"
+                <img src="https://lh3.googleusercontent.com/a/ACg8ocIssuwBDO1kCOxT6KJMt3ue1TFrH_VgLxAjIZBr8d_Ny0ic_w=s432-c-no"
                     alt="">
             </div>
         </ul>
@@ -30,12 +44,35 @@
                 <div class="searchBar">
                     <i class="fa-solid  fa-magnifying-glass "></i>
 
-                    <input type="text" name="q" placeholder="Enter content to Search">
-               `     <i class="fa-solid fa-microphone"></i>
+                    <input type="text" name="q" placeholder="">
+                    ` <i class="fa-solid fa-microphone"></i>
                 </div>
             </div>
         </form>
+        <div class="buttons">
+            <button type="button">Google Search</button>
+            <button type="button">I'm Feeling lucky</button>
+        </div>
+        <p class="para">Google Offerred in: <span>नेपाली</span> </p>
     </main>
+
+    <footer>
+        <p>Nepal</p>
+        <hr>
+        <div class="inner-footer">
+            <div>
+          <p>About</p>
+          <p>Advertising</p>
+          <p>Bussiness</p>
+          <p>How Search Works</p>
+            </div>
+            <div>
+                   <p>Privacy</p>
+                   <p>Terms</p>
+                   <p>Settings</p>
+            </div>
+        </div>
+    </footer>
 
 
 
